# adversarialbackseatdriving

./: README.md  debug_largo_prompt_layout.py  gcgjob.sh  pyproject.toml  requirements.txt  target_responses.json  viewer.ipynb
data/: concepts_200.txt  happy_sad_pairs.jsonl  happy_sad_prompts2.txt  happy_sad_prompts3.txt  hapsad_wordbank.json  llama2_7b_chathf_happy_sad_corpus.jsonl  llama_happy_sad_corpus.jsonl  llama_happy_sad_corpus_long.jsonl  llama_truth_lie_corpus.jsonl  qualitative_happy_sad_introspective_prompts.txt  qualitative_happy_sad_prompts.txt  qualitative_truth_prompts.txt  qwen_truth_lie_corpus.jsonl  truth_lie_pairs.jsonl
src/adv_steering/: __init__.py  analyze_poscon_negcon_residuals.py  analyze_truth_lie_residuals.py  backend.py  data.py  env.py  evaluate.py  gcg.py  generate_poscon_negcon_corpus.py  generate_truth_lie_corpus.py  metrics.py  modeling.py  plot_context_token_residuals.py  plot_largo_coach_reconstruction_loss.py  plot_poscon_negcon_geometry.py  plot_poscon_negcon_residual_modes.py  ps_tokenwise_probe_attack_largo.py  qualitative_poscon_negcon_steering.py  qualitative_truth_steering.py  qwen_vl.py  rep_prefix_attack_gcg_token_conceptness.py  rep_prefix_attack_soft_prompt.py  rep_suffix_attack.py  rep_suffix_attack_largo.py  rep_suffix_attack_largo_token_conceptness.py  rep_suffix_attack_soft_prompt.py  run_experiment.py  run_largo_coach_reconstruction.py  run_poscon_negcon_pipeline.py  run_rep_suffix_sweep.py  run_truth_lie_pipeline.py  steering.py  text_backend.py  visualize_token_conceptness.py
